# postcard-rpc

example/full-setup/firmware/: Cargo.toml
example/full-setup/firmware/.cargo/: config.toml
example/full-setup/firmware/src/: main.rs  usb.rs
example/full-setup/host-client/src/: main.rs
